# saneql

./: CMakeLists.txt  Makefile  compile_flags.txt  main.cpp
algebra/: Expression.cpp  Expression.hpp  ExpressionTree.hpp  Operator.cpp  Operator.hpp  OperatorTree.hpp
compiler/: SaneQLCompiler.cpp  SaneQLCompiler.hpp
examples/tpch/: q16.sql  q2.saneql  q20.sane
infra/: Schema.cpp  Schema.hpp
integrations/: Makefile  duckdb-saneql.cpp  duckdb-saneql.hpp  sqlite-saneql.cpp
makeutil/: astgen.cpp  patchbison
parser/: Keywords.hpp  saneql.ypp
semana/: Functions.cpp  Functions.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp
sql/: SQLGenerator.cpp  SQLGenerator.hpp  SQLWriter.cpp  SQLWriter.hpp
